clusters/homelab/namespaces/agentgateway-system/backend-thenode.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: the-node
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1/chat/completions
      headers:
      - type: RegularExpression
        name: x-model
        value: "^the-node/.*"
    backendRefs:
    - name: the-node-llm
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
  - matches:
    - path:
        type: PathPrefix
        value: /v1/embeddings
    backendRefs:
    - name: the-node-embeddings
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
  - matches:
    - path:
        type: PathPrefix
        value: /v1/responses
      headers:
      - type: RegularExpression
        name: x-model
        value: "^the-node/.*"
    backendRefs:
    - name: the-node-responses
      namespace: agentgateway-system
      group: agentgateway.dev
      kind: AgentgatewayBackend
